# macaddr

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yaml  githubactions.yaml  release.yaml
src/: main.rs
